--- a/Project-WebApp/web/index.xhtml
+++ b/Project-WebApp/web/index.xhtml
@@ -6,7 +6,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        Hello from Faceletsc
         #{testBean.something}
     </h:body>
 </html>
