--- a/Project-WebApp/web/index.xhtml
+++ b/Project-WebApp/web/index.xhtml
@@ -7,7 +7,7 @@
     </h:head>
     <h:body>
 
-        Hello from Faceletsb
+        Hello from Faceletsd
 
         #{testBean.something}
     </h:body>
