Added LunchMenu och TableReservation entity, Restfull API was set up

--- a/Project-WebApp/web/Test.xhtml
+++ b/Project-WebApp/web/Test.xhtml
@@ -27,7 +27,7 @@
             <h:outputLabel value="Create Ordering" />
             <br/>
             <h:outputLabel value="With timestamp: " />
-            <h:selectBooleanCheckbox onclick="#{testModel.ordering.setTimestamp()}"/>
+            <h:selectBooleanCheckbox onclick="#{testModel.ordering.ordertime}"/>
             <br/>
             <h:commandButton value="Save" action="#{testModel.saveOrdering()}" />
             <br/>
